fixed gap in header right; added some @media 992 changes

--- a/about.css
+++ b/about.css
@@ -54,7 +54,7 @@ a:hover, a:active {
 
 .header {
 	position: fixed;
-	width: 100%;
+	width: 101.7%;
 	padding: 25px 0 15px 25px;
 	border: none;
 	background-color: rgba(0, 0, 0, 0.8);
@@ -92,7 +92,7 @@ a:hover, a:active {
 }
 
 .header button {
-	margin-right: 5px;
+	margin-right: 15px;
 }
 
 .btn-color-background {
@@ -285,6 +285,25 @@ a:hover, a:active {
 /*======== Parallax Content - @media ========*/
 
 @media screen and (max-width: 992px) {
+	.jumbotron {
+		padding: 0px 0px 0px;
+		margin: 0px 0 -25px;
+	}
+
+	.jumbotron.transparent {
+		margin-top: -25px;
+		padding-top: 50px;
+	}
+
+	.jumbotron h2 {
+		font-size: 5em;
+		padding: 0px;
+	}
+
+	.jumbotron p {
+		font-size: 1.1em;
+		padding: 30px 150px 60px;
+	}
 }
 
 /*======== Miscellaneous ========*/
